better W3C alignment. UI for autocomplete over fixed

--- a/src/scss/main.style.scss
+++ b/src/scss/main.style.scss
@@ -15,15 +15,11 @@
 body.noscroll {
   overflow: hidden;
 }
-
+.ui-autocomplete.ui-front {
+  z-index: 2000 !important;
+}
 .page {
-  .ui-autocomplete {
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: default;
-    z-index: 2000;
-  }
+
   #main-nav-bar {
     min-height: 10rem;
     padding-bottom: 2rem;
